--- a/BlazingTrails/BlazingTrails.Client/BlazingTrails.Client.csproj
+++ b/BlazingTrails/BlazingTrails.Client/BlazingTrails.Client.csproj
@@ -21,4 +21,8 @@
     <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
