--- a/BlazingTrails.Api/BlazingTrails.Api.csproj
+++ b/BlazingTrails.Api/BlazingTrails.Api.csproj
@@ -8,12 +8,23 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlazingTrails.Shared\BlazingTrails.Shared.csproj" />
     <ProjectReference Include="..\BlazingTrails\BlazingTrails.Client\BlazingTrails.Client.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Persistence\Data\" />
+    <Folder Include="Persistence\Entities\" />
   </ItemGroup>
 
 </Project>
