Basic EditForm configuration

--- a/BlazingTrails/BlazingTrails.Client/BlazingTrails.Client.csproj
+++ b/BlazingTrails/BlazingTrails.Client/BlazingTrails.Client.csproj
@@ -51,4 +51,8 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BlazingTrails.Shared\BlazingTrails.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
