--- a/BlazingTrails.Shared/BlazingTrails.Shared.csproj
+++ b/BlazingTrails.Shared/BlazingTrails.Shared.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="MediatR" Version="11.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.16" />
   </ItemGroup>
 
 </Project>
