--- a/BlazingTrails.Client/BlazingTrails.Client.csproj
+++ b/BlazingTrails.Client/BlazingTrails.Client.csproj
@@ -10,6 +10,14 @@
   <ItemGroup>
     <Watch Include="**/*.scss" />
     <None Update="**/*.css" Watch="false" />
+    <Content Remove="package.json" />
+    <None Include="package.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <Content Remove="package-lock.json" />
+    <None Include="package-lock.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   
   <Target Name="CheckForNpm" BeforeTargets="RunNpmInstall">
@@ -56,6 +64,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazingTrails.Shared\BlazingTrails.Shared.csproj" />
+    <ProjectReference Include="..\BlazingTrails.ComponentLibrary\BlazingTrails.ComponentLibrary.csproj" />
   </ItemGroup>
 
 </Project>
