Configuring ASP.NET Core WebAPI to use Auth0

--- a/BlazingTrails.Api/appsettings.json
+++ b/BlazingTrails.Api/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BlazingTrailsContext": "DataSource=Persistence/Data/blazingtrails.db"
+  },
+  "Auth0": {
+    "Authority": "https://dev-p333siffii6iowf2.us.auth0.com",
+    "ApiIdentifier": "https://blazingtrailsapi.com"
   }
 }
